
----------------------------------
Release: 4.2.3
Date:
----------------------------------
Changes/New Features:

CAY-2884 Upgrade gradle to 8.13
CAY-2893 Update velocity-engine-core dependency
CAY-2897 Add no-op default implementations to the GraphChangeHandler interface
CAY-2905 Upgrade Gradle to 8.14

Bug Fixes:

CAY-2836 ObjectSelect.selectCount() throws if a query contains ordering
CAY-2883 License and notice templates are not processed by the Gradle build
CAY-2885 Modeler: DbImport fails to load DB schema view
CAY-2887 Expressions: Incorrect serialization to string of numeric literals
CAY-2895 Incorrect Lazy Pagination Comparison for BigInteger PK
CAY-2896 Inserting two identical objects into two datamaps stores both objects in the last used datamap
CAY-2898 Crypto: NPE in a ColumnQuery
CAY-2899 CommitLog: missing lifecycle-induced changes in `excludeFromTransaction` mode
CAY-2900 Meaningful generated PKs could lead to the ClassCastException
CAY-2901 Loosing comments on the existing ObjAttribute after DB import
CAY-2904 Disjoint prefetch returns incorrect data

----------------------------------
Release: 4.2.2
Date: March 14, 2025
----------------------------------
Changes/New Features:

CAY-2867 Tweak GraphBasedDbRowOpSorter logic to allow related updates
CAY-2872 CayenneModeler "Documentation" link is broken
CAY-2873 Change Orderings.orderedList() to accept a Collection rather than a List

Bug Fixes:

CAY-2866 DefaultDataDomainFlushAction breaks on circular relationship update
CAY-2868 Regression: DefaultDbRowOpSorter shouldn't sort update operations
CAY-2871 QualifierTranslator breaks on a relationship with a compound FK
CAY-2876 Memory leak in the ObjectStore
CAY-2879 Negative number for non parameterized ObjectSelect query not processed correctly

----------------------------------
Release: 4.2.1
Date: June 20, 2024
----------------------------------
Changes/New Features:

CAY-2849 Switch documentation to `hugo-asciidoctorj-extension`