@@ -24,6 +24,10 @@ import java.util.List;
 import org.apache.cayenne.access.sqlbuilder.ExpressionNodeBuilder;
 import org.apache.cayenne.access.sqlbuilder.JoinNodeBuilder;
 import org.apache.cayenne.access.sqlbuilder.NodeBuilder;
+import org.apache.cayenne.access.sqlbuilder.sqltree.Node;
+import org.apache.cayenne.exp.Expression;
+import org.apache.cayenne.exp.parser.ASTDbPath;
+import org.apache.cayenne.exp.parser.ASTPath;
 import org.apache.cayenne.map.DbAttribute;
 import org.apache.cayenne.map.DbJoin;
 
@@ -74,6 +78,37 @@ class TableTreeStage implements TranslationStage {
             }
         }
 
+        // append entity qualifiers
+        expressionNodeBuilder = appendQualifier(expressionNodeBuilder, context, node, node.getEntity().getQualifier());
+        expressionNodeBuilder = appendQualifier(expressionNodeBuilder, context, node, node.getAdditionalQualifier());
         return expressionNodeBuilder;
+    }
+
+    private static ExpressionNodeBuilder appendQualifier(ExpressionNodeBuilder joinBuilder,
+                                        TranslatorContext context,
+                                        TableTreeNode node,
+                                        Expression dbQualifier) {
+        if (dbQualifier == null) {
+            return joinBuilder;
+        }
+
+        dbQualifier = translateToDbPath(node, dbQualifier);
+        Node translatedQualifier = context.getQualifierTranslator().translate(dbQualifier);
+        return joinBuilder.and(() -> translatedQualifier);
+    }
+
+    static Expression translateToDbPath(TableTreeNode node, Expression dbQualifier) {
+        String pathToRoot = node.getAttributePath().getPath();
+        dbQualifier = dbQualifier.transform(input -> {
+            if (input instanceof ASTPath) {
+                String path = ((ASTPath) input).getPath();
+                if(!pathToRoot.isEmpty()) {
+                    path = pathToRoot + '.' + path;
+                }
+                return new ASTDbPath(path);
+            }
+            return input;
+        });
+        return dbQualifier;
     }
 }
